[gd_scene load_steps=16 format=1]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Images/menu _ pause/CoverArt.png" type="Texture" id=2]
[ext_resource path="res://Images/menu _ pause/Button_hover.png" type="Texture" id=3]
[ext_resource path="res://Images/menu _ pause/Button_select.png" type="Texture" id=4]
[ext_resource path="res://Images/menu _ pause/Button.png" type="Texture" id=5]
[ext_resource path="res://Fonts/FontPoints.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Sounds/menu/Accept.wav" type="Sample" id=7]
[ext_resource path="res://Sounds/menu/Select.wav" type="Sample" id=8]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 1.0
margin/right = 1.0
margin/top = 1.0
margin/bottom = 3.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 3.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 3.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 1.0
margin/right = 1.0
margin/top = 1.0
margin/bottom = 3.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 3.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 3.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="SampleLibrary" id=7]

samples/Accept = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/Select = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[node name="Control" type="Node"]

script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true }

[node name="Panel" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="PlayBtn" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 230.0
margin/top = 440.0
margin/right = 410.0
margin/bottom = 480.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play Game"
flat = false

[node name="Quit" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 230.0
margin/top = 490.0
margin/right = 410.0
margin/bottom = 530.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="TopScore" type="Label" parent="Panel"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 550.0
margin/right = 210.0
margin/bottom = 577.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Top Score:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="Panel/TopScore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 163.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 25.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 7 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="Panel/PlayBtn" to="." method="_on_PlayBtn_pressed"]

[connection signal="pressed" from="Panel/Quit" to="." method="_on_Quit_pressed"]


